--- a/Client/my-app/package.json
+++ b/Client/my-app/package.json
@@ -22,6 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,7 +40,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "proxy": "http://0.0.0.0:8080"
+    ]
+    
   }
 }
