--- a/Client/my-app/package.json
+++ b/Client/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.1",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
@@ -23,7 +24,6 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080",
-  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
   }
 }
