--- a/Client/my-app/package.json
+++ b/Client/my-app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "crypto-js": "^4.0.0",
+    "dayjs": "^1.10.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
